--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-icons": "^2.2.5",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-icons": "^2.2.7",
     "react-loading": "^0.1.4",
-    "react-modal": "^2.2.2",
-    "react-redux": "^5.0.5",
-    "react-scripts": "1.0.10",
+    "react-modal": "^2.4.1",
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.3",
     "redux": "^3.7.2"
   },
   "scripts": {
@@ -17,5 +17,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
